--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,7 @@
     <body>
         <div id="container">
             <div id="leftPage">
-                <div id="leftPageTitleField">
-                    Add New Tasks
-                </div>
+                <div id="leftPageTitleField">New Task</div>
                 <div id="taskMainField">
                     <form id="newTaskForm">
                         <div id="taskDescriptionField">
@@ -167,12 +165,20 @@
                             </div>
                         </div>
                         <div id="taskTagField">
-                            <div id="taskTagTitle">Tags</div>
+                            <div id="taskTagTitle" class="taskTagFieldRow">Tags</div>
+                            <div id="taskTagSelectorRow" class="taskTagFieldRow">
+                                <button id="tagSelectorButton">Tag List</button>
+                                <div id="tagSelector">
+                                    <div class="tag-selector-tag">Tag 1</div>
+                                    <div class="tag-selector-tag">Tag 2</div>
+                                    <div class="tag-selector-tag">Tag 3</div>
+                                </div>
+                            </div>
                             <div id="taskTagInputField">
                                 <input type="text" size="100" id="taskTagEntry">
                             </div>
                             <div id="taskTagDescriptionField">
-                                <p>format: #[tag1] #[tag2] #[tag3] ...
+                                <p>format: #tag1 #tag2 #tag3...
                             </div>
                         </div>                    
                         <div id="taskSubmitButtonField">
@@ -182,19 +188,20 @@
                 </div>
             </div>
             <div id="rightPage">
-                <div id="rightPageTitleField">
-                    Task List
-                </div>
+                <div id="rightPageTitleField">Task List</div>
                 <div id="rightPageBufferSpace"></div>
                 <div id="userTaskField">
-                    <div class="taskColumn">
-                        <div class="taskCell" id="taskCell-1"></div>
-                        <div class="taskCell" id="taskCell-2"></div>
-                        <div class="taskCell" id="taskCell-3"></div>
+                    <div id="taskColumn">
+                        <div id="taskColumnPlaceholder">
+                            Your tasks will be placed here :)
+                        </div>
                     </div>
                 </div>
                 <div id="taskPageButtonField"></div>
             </div>
+        </div>
+        <div id="ghostSpace">
+
         </div>
         <script src="app.js"></script>
     </body>
