--- a/src/app.html
+++ b/src/app.html
@@ -169,9 +169,9 @@
                         <div id="taskTagField">
                             <div id="taskTagTitle" class="taskTagFieldRow">Tags</div>
                             <div id="taskTagListRow" class="taskTagFieldRow">
-                               <button id="tagListModalButton">Tag List</button>
+                                <button id="tagListModalButton">Tag List</button>
                                 <div id="tagListModal" class="modal">
-                                    <div class="modal-content">
+                                    <div id="tagListInnerModalContent" class="modal-content">
                                         <span class="close">&times;</span>
                                         <div id="tagListModalTitle">
                                             <h3>Tags</h3>
