--- a/src/app.html
+++ b/src/app.html
@@ -173,9 +173,9 @@
                                 <div id="tagListModal" class="modal">
                                     <div id="tagListInnerModalContent" class="modal-content">
                                         <span class="close">&times;</span>
-                                        <div id="tagListModalTitle">
-                                            <h3>Tags</h3>
-                                        </div>
+                                        <table id="defaultTagTable" class="tagTable">
+                                            <th id="defaultTagTableHeaderCell">Tags</th>
+                                        </table>
                                     </div>
                                 </div>
                             </div>
