--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,8 @@
     <head>
         <title>Prioritask</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="css/app.css">
+        <link rel="stylesheet" href="css/global.css">
         <link rel="apple-touch-icon" sizes="180x180" href="../favicons/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="../favicons/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="../favicons/favicon-16x16.png">
@@ -11,8 +12,8 @@
     </head>
     <body>
         <div id="container">
-            <div id="leftPage">
-                <div id="leftPageTitleField">New Task</div>
+            <div id="leftPage" class="page">
+                <div id="leftPageTitleField" class="pageTitleField">New Task</div>
                 <div id="taskMainField">
                     <form id="newTaskForm">
                         <div id="taskDescriptionField">
@@ -198,8 +199,8 @@
                     </form>                
                 </div>
             </div>
-            <div id="rightPage">
-                <div id="rightPageTitleField">Task List</div>
+            <div id="rightPage" class="page">
+                <div id="rightPageTitleField" class="pageTitleField">Task List</div>
                 <div id="rightPageBufferSpace"></div>
                 <div id="userTaskField">
                     <div id="taskColumn">
@@ -211,9 +212,6 @@
                 <div id="taskPageButtonField"></div>
             </div>
         </div>
-        <div id="ghostSpace">
-        </div>
         <script src="app.js"></script>
-        <script src="cookies.js"></script>
     </body>
 </html>
