checkpoint - fixing sortTagsAZ()

--- a/src/main.html
+++ b/src/main.html
@@ -13,9 +13,9 @@
     <body>
         <div id="container">
             <div id="tempBox">
-                <h3><a href="app.html">Prioritask</a></h3>
-                <h3><a href="about.html">About</a></h3>
-                <h3><a href="faq.html">FAQ</a></h3>
+                <p><a href="app.html">Prioritask </a></p>
+                <p><a href="about.html">About </a></p>
+                <p><a href="faq.html">FAQ</a></p>
             </div>
             <div id="bottomBar">
 
