--- a/src/app.html
+++ b/src/app.html
@@ -192,8 +192,8 @@
                                 <button type="submit" class="bottomRowButton" id="taskSubmitButton">Submit Task</button>
                             </div>
                             <div class="leftPageBottomButtonSubfield" id="leftPageBottomButtonSubfield-1">
-                                <button class="bottomRowButton" id="cookieExportButton">Export</button>
-                                <button class="bottomRowButton" id="cookieExportButton">Import</button>
+                                <button class="bottomRowButton" id="appDataExportButton">Export</button>
+                                <button class="bottomRowButton" id="appDataImportButton">Import</button>
                             </div>
                         </div>
                     </form>                
