--- a/src/app.html
+++ b/src/app.html
@@ -200,16 +200,20 @@
                 </div>
             </div>
             <div id="rightPage" class="page">
-                <div id="rightPageTitleField" class="pageTitleField">Task List</div>
-                <div id="rightPageBufferSpace"></div>
-                <div id="userTaskField">
-                    <div id="taskColumn">
-                        <div id="taskColumnPlaceholder">
-                            Your tasks will be placed here :)
+                <form id="taskListForm">
+                    <div id="rightPageTitleField" class="pageTitleField">Task List</div>
+                    <div id="rightPageBufferSpace"></div>
+                    <div id="userTaskField">
+                        <div id="taskColumn">
+                                <div id="taskColumnPlaceholder">
+                                Your tasks will be placed here :)
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div id="taskPageButtonField"></div>
+                    <div id="taskPageButtonField">
+                        <button id="deleteTaskButton" class=>Delete Task(s)</button>
+                    </div>
+                </form>
             </div>
         </div>
         <script src="app.js"></script>
