--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta http-equiv="refresh" content="0, url=src/main.html">
+        <meta http-equiv="refresh" content="0, url=./public/main.html">
         <title>Redirecting...</title>
     </head>
     <body>
-        <p>If you are not automatically redirected, please <a href="src/main.html">click here</a>.</p>
+        <p>If you are not automatically redirected, please <a href="./public/main.html">click here</a>.</p>
     </body>
 </html>
