--- a/public/app.html
+++ b/public/app.html
@@ -3,12 +3,13 @@
     <head>
         <title>Prioritask</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="css/app.css">
-        <link rel="stylesheet" href="css/global.css">
-        <link rel="apple-touch-icon" sizes="180x180" href="../favicons/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="../favicons/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="../favicons/favicon-16x16.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Simple task manager app">
+        <meta name="keywords" content="task manager, project, wip, work in progress, javascript, js, web app, software">
+        <meta name="author" content="Viihna Lehraine">
+        <link rel="icon" type="img/svg+xml" href="./assets/favicons/favicon.svg">
+        <link rel="shortcut icon" type="image/png" size="16x16" href="./assets/favicons/favicon-android-chrome.png">
+        <link rel="stylesheet" href="./css/app.css">
     </head>
     <body>
         <div id="container">
@@ -216,7 +217,6 @@
                 </form>
             </div>
         </div>
-        <script src="app.js"></script>
-        <script src="service-worker.js"></script>
+        <script src="./js/app.js" type="module"></script>
     </body>
 </html>
